# module-talkingdb

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-publish.sh  git-packages.json  pyproject.toml
app/: main.py
app/api/: documents.py  extract.py  index.py  jobs.py  queries.py  root.py
app/core/: thread_pool.py
app/model/: documents.py  extract.py  index.py  jobs.py  queries.py
app/services/: extractor.py  graph_html.py  indexer.py  job_observability.py  package_content_elementizer.py  package_graph_indexer.py  package_root_resolver.py  package_semantic_extractor.py  package_symbol_generator.py  package_text_tokenizer.py  workers.py
