[project]
name = "module-talkingdb"
version = "2.0.0"
description = "Central module implementing TalkingDB's symbolic reasoning workflows."
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

fastapi = ">=0.125.0,<0.126.0"
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }

dotenv = ">=0.9.9,<0.10.0"
python-dotenv = ">=1.2.1,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"

debugpy = ">=1.8.19,<2.0.0"
networkx = "^3.6.1"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "cd57f4b0f6a4f744e57ddb78d392b215f3c0f7b7" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "53b99b9755fc84c813aa32c78b1d7d50ca8a06f0" }
talkingdb-helpers = { git = "git+https://github.com/TalkingDB/base-tdb-helpers.git", rev = "0348be0c016d1fa5fbdbd754bda0434706cc9ac4" }
package-content-elementizer = { git = "git+https://github.com/TalkingDB/package-content-elementizer.git", rev = "93666cb438571619aeae02e2aa9ecf897468340b" }
uvloop = "^0.22.1"
httptools = "^0.7.1"
spacy = "^3.8.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
